// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppSwitcherPanel /> Applications without a name or url should not be renderered should render correctly 1`] = `
<WithStyles(AppSwitcherPanel)
  applications={
    Array [
      Object {
        "description": "Mock App 1 Description",
        "iconUrl": "http://mockapp1/icon",
        "id": "app-1",
        "name": "Mock App 1 - VALID",
        "target": "_top",
        "url": "http://mockapp1/",
      },
      Object {
        "description": "Mock App 2 Description",
        "iconUrl": "http://mockapp2/icon",
        "id": "app-2",
        "target": "_blank",
        "url": "http://mockapp2/",
      },
      Object {
        "description": "Mock App 3 Description",
        "iconUrl": "http://mockapp3/icon",
        "id": "app-3",
        "name": "Mock App 3",
      },
      Object {
        "description": "Mock App 4 Description",
        "iconUrl": "http://mockapp4/icon",
        "id": "app-4",
      },
      Object {
        "iconUrl": "http://mockapp5/icon",
        "id": "app-5",
        "name": "Mock App 5 - VALID without description",
        "url": "http://mockapp5/",
      },
    ]
  }
  isOpen={true}
  title="Mock title"
>
  <AppSwitcherPanel
    applications={
      Array [
        Object {
          "description": "Mock App 1 Description",
          "iconUrl": "http://mockapp1/icon",
          "id": "app-1",
          "name": "Mock App 1 - VALID",
          "target": "_top",
          "url": "http://mockapp1/",
        },
        Object {
          "description": "Mock App 2 Description",
          "iconUrl": "http://mockapp2/icon",
          "id": "app-2",
          "target": "_blank",
          "url": "http://mockapp2/",
        },
        Object {
          "description": "Mock App 3 Description",
          "iconUrl": "http://mockapp3/icon",
          "id": "app-3",
          "name": "Mock App 3",
        },
        Object {
          "description": "Mock App 4 Description",
          "iconUrl": "http://mockapp4/icon",
          "id": "app-4",
        },
        Object {
          "iconUrl": "http://mockapp5/icon",
          "id": "app-5",
          "name": "Mock App 5 - VALID without description",
          "url": "http://mockapp5/",
        },
      ]
    }
    classes={
      Object {
        "actionsContainer": "AppSwitcherPanel-actionsContainer-71",
        "footerContainer": "AppSwitcherPanel-footerContainer-72",
        "headerContainer": "AppSwitcherPanel-headerContainer-68",
        "open": "AppSwitcherPanel-open-67",
        "root": "AppSwitcherPanel-root-66",
        "title": "AppSwitcherPanel-title-70",
        "titleContainer": "AppSwitcherPanel-titleContainer-69",
      }
    }
    isActionSelectedCallback={[Function]}
    isOpen={true}
    onActionClickedCallback={[Function]}
    title="Mock title"
  >
    <div
      className="AppSwitcherPanel-root-66 AppSwitcherPanel-open-67"
      id="hv-appswitcherpanel-6"
    >
      <div
        className="AppSwitcherPanel-headerContainer-68"
      >
        <div
          className="AppSwitcherPanel-titleContainer-69"
        >
          <div
            className="AppSwitcherPanel-title-70"
            title="Mock title"
          >
            Mock title
          </div>
        </div>
      </div>
      <div
        className="AppSwitcherPanel-actionsContainer-71"
      >
        <WithStyles(Action)
          application={
            Object {
              "description": "Mock App 1 Description",
              "iconUrl": "http://mockapp1/icon",
              "id": "app-1",
              "name": "Mock App 1 - VALID",
              "target": "_top",
              "url": "http://mockapp1/",
            }
          }
          isSelectedCallback={[Function]}
          key="http://mockapp1/"
          onClickCallback={[Function]}
        >
          <Action
            application={
              Object {
                "description": "Mock App 1 Description",
                "iconUrl": "http://mockapp1/icon",
                "id": "app-1",
                "name": "Mock App 1 - VALID",
                "target": "_top",
                "url": "http://mockapp1/",
              }
            }
            classes={
              Object {
                "dummyImage": "Action-dummyImage-75",
                "iconInfo": "Action-iconInfo-77",
                "iconUrl": "Action-iconUrl-78",
                "link": "Action-link-76",
                "selected": "Action-selected-74",
                "typography": "Action-typography-73",
              }
            }
            isSelectedCallback={[Function]}
            onClickCallback={[Function]}
          >
            <a
              className="Action-link-76"
              href="http://mockapp1/"
              target="_top"
            >
              <WithStyles(ForwardRef)
                className="Action-typography-73"
                component="div"
                onClick={[Function]}
                role="button"
                tabIndex={0}
                variant="normalText"
              >
                <ForwardRef
                  className="Action-typography-73"
                  classes={
                    Object {
                      "3xlTitle": "HvTypography-3xlTitle",
                      "4xlTitle": "HvTypography-4xlTitle",
                      "5xlTitle": "HvTypography-5xlTitle",
                      "disabledText": "HvTypography-disabledText",
                      "highlightText": "HvTypography-highlightText",
                      "lTitle": "HvTypography-lTitle",
                      "link": "HvTypography-link",
                      "mTitle": "HvTypography-mTitle",
                      "noWrap": "HvTypography-noWrap",
                      "normalText": "HvTypography-normalText",
                      "placeholderText": "HvTypography-placeholderText",
                      "root": "HvTypography-root",
                      "sTitle": "HvTypography-sTitle",
                      "sectionTitle": "HvTypography-sectionTitle",
                      "selectedNavText": "HvTypography-selectedNavText",
                      "vizText": "HvTypography-vizText",
                      "vizTextDisabled": "HvTypography-vizTextDisabled",
                      "xlTitle": "HvTypography-xlTitle",
                      "xsInlineLink": "HvTypography-xsInlineLink",
                      "xsTitle": "HvTypography-xsTitle",
                      "xxlTitle": "HvTypography-xxlTitle",
                      "xxsTitle": "HvTypography-xxsTitle",
                    }
                  }
                  component="div"
                  onClick={[Function]}
                  role="button"
                  tabIndex={0}
                  variant="normalText"
                >
                  <div
                    className="Action-typography-73 HvTypography-root HvTypography-normalText"
                    onClick={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <img
                      className="Action-iconUrl-78"
                      onError={[Function]}
                      src="http://mockapp1/icon"
                    />
                    <span
                      title="Mock App 1 - VALID"
                    >
                      Mock App 1 - VALID
                    </span>
                    <Info
                      className="Action-iconInfo-77"
                      title="Mock App 1 Description"
                    >
                      <HvIconBase
                        className="Action-iconInfo-77"
                        iconSize="S"
                        name="Info"
                        title="Mock App 1 Description"
                      >
                        <div
                          className="Action-iconInfo-77 HvIconBase-root HvIconBase-s"
                          name="Info"
                          title="Mock App 1 Description"
                        >
                          <svg
                            focusable={false}
                            height={16}
                            viewBox="0 0 16 16"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              className="color0"
                              d="M8 16a8 8 0 118-8 8 8 0 01-8 8zM8 1a6.957 6.957 0 00-7 6.91373Q.99973 7.95687 1 8a6.957 6.957 0 006.91373 7q.04314.00027.08627 0a6.957 6.957 0 007-6.91373Q15.00027 8.04313 15 8a6.957 6.957 0 00-6.91373-7Q8.04313.99973 8 1zm-.5 11h1V6h-1zm0-7h1V4h-1z"
                              fill="#414141"
                            />
                          </svg>
                        </div>
                      </HvIconBase>
                    </Info>
                  </div>
                </ForwardRef>
              </WithStyles(ForwardRef)>
            </a>
          </Action>
        </WithStyles(Action)>
        <WithStyles(Action)
          application={
            Object {
              "iconUrl": "http://mockapp5/icon",
              "id": "app-5",
              "name": "Mock App 5 - VALID without description",
              "url": "http://mockapp5/",
            }
          }
          isSelectedCallback={[Function]}
          key="http://mockapp5/"
          onClickCallback={[Function]}
        >
          <Action
            application={
              Object {
                "iconUrl": "http://mockapp5/icon",
                "id": "app-5",
                "name": "Mock App 5 - VALID without description",
                "url": "http://mockapp5/",
              }
            }
            classes={
              Object {
                "dummyImage": "Action-dummyImage-75",
                "iconInfo": "Action-iconInfo-77",
                "iconUrl": "Action-iconUrl-78",
                "link": "Action-link-76",
                "selected": "Action-selected-74",
                "typography": "Action-typography-73",
              }
            }
            isSelectedCallback={[Function]}
            onClickCallback={[Function]}
          >
            <a
              className="Action-link-76"
              href="http://mockapp5/"
              target="_top"
            >
              <WithStyles(ForwardRef)
                className="Action-typography-73"
                component="div"
                onClick={[Function]}
                role="button"
                tabIndex={0}
                variant="normalText"
              >
                <ForwardRef
                  className="Action-typography-73"
                  classes={
                    Object {
                      "3xlTitle": "HvTypography-3xlTitle",
                      "4xlTitle": "HvTypography-4xlTitle",
                      "5xlTitle": "HvTypography-5xlTitle",
                      "disabledText": "HvTypography-disabledText",
                      "highlightText": "HvTypography-highlightText",
                      "lTitle": "HvTypography-lTitle",
                      "link": "HvTypography-link",
                      "mTitle": "HvTypography-mTitle",
                      "noWrap": "HvTypography-noWrap",
                      "normalText": "HvTypography-normalText",
                      "placeholderText": "HvTypography-placeholderText",
                      "root": "HvTypography-root",
                      "sTitle": "HvTypography-sTitle",
                      "sectionTitle": "HvTypography-sectionTitle",
                      "selectedNavText": "HvTypography-selectedNavText",
                      "vizText": "HvTypography-vizText",
                      "vizTextDisabled": "HvTypography-vizTextDisabled",
                      "xlTitle": "HvTypography-xlTitle",
                      "xsInlineLink": "HvTypography-xsInlineLink",
                      "xsTitle": "HvTypography-xsTitle",
                      "xxlTitle": "HvTypography-xxlTitle",
                      "xxsTitle": "HvTypography-xxsTitle",
                    }
                  }
                  component="div"
                  onClick={[Function]}
                  role="button"
                  tabIndex={0}
                  variant="normalText"
                >
                  <div
                    className="Action-typography-73 HvTypography-root HvTypography-normalText"
                    onClick={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <img
                      className="Action-iconUrl-78"
                      onError={[Function]}
                      src="http://mockapp5/icon"
                    />
                    <span
                      title="Mock App 5 - VALID without description"
                    >
                      Mock App 5 - VALID without description
                    </span>
                  </div>
                </ForwardRef>
              </WithStyles(ForwardRef)>
            </a>
          </Action>
        </WithStyles(Action)>
      </div>
    </div>
  </AppSwitcherPanel>
</WithStyles(AppSwitcherPanel)>
`;

exports[`<AppSwitcherPanel /> with minimum configuration should render correctly 1`] = `
<WithStyles(AppSwitcherPanel)
  applications={
    Array [
      Object {
        "iconUrl": "http://mockapp1/icon",
        "id": "app-1",
        "name": "Mock App 1",
        "target": "_top",
        "url": "http://mockapp1/",
      },
      Object {
        "description": "Mock App 2 Description",
        "iconUrl": "http://mockapp2/icon",
        "id": "app-2",
        "name": "Mock App 2",
        "target": "_blank",
        "url": "http://mockapp2/",
      },
      Object {
        "description": "Mock App 2 Description",
        "iconUrl": "http://mockapp2/icon",
        "id": "app-3",
        "name": "Mock App 3",
        "url": "http://mockapp2/",
      },
    ]
  }
  isOpen={true}
  title="Mock title"
>
  <AppSwitcherPanel
    applications={
      Array [
        Object {
          "iconUrl": "http://mockapp1/icon",
          "id": "app-1",
          "name": "Mock App 1",
          "target": "_top",
          "url": "http://mockapp1/",
        },
        Object {
          "description": "Mock App 2 Description",
          "iconUrl": "http://mockapp2/icon",
          "id": "app-2",
          "name": "Mock App 2",
          "target": "_blank",
          "url": "http://mockapp2/",
        },
        Object {
          "description": "Mock App 2 Description",
          "iconUrl": "http://mockapp2/icon",
          "id": "app-3",
          "name": "Mock App 3",
          "url": "http://mockapp2/",
        },
      ]
    }
    classes={
      Object {
        "actionsContainer": "AppSwitcherPanel-actionsContainer-19",
        "footerContainer": "AppSwitcherPanel-footerContainer-20",
        "headerContainer": "AppSwitcherPanel-headerContainer-16",
        "open": "AppSwitcherPanel-open-15",
        "root": "AppSwitcherPanel-root-14",
        "title": "AppSwitcherPanel-title-18",
        "titleContainer": "AppSwitcherPanel-titleContainer-17",
      }
    }
    isActionSelectedCallback={[Function]}
    isOpen={true}
    onActionClickedCallback={[Function]}
    title="Mock title"
  >
    <div
      className="AppSwitcherPanel-root-14 AppSwitcherPanel-open-15"
      id="hv-appswitcherpanel-2"
    >
      <div
        className="AppSwitcherPanel-headerContainer-16"
      >
        <div
          className="AppSwitcherPanel-titleContainer-17"
        >
          <div
            className="AppSwitcherPanel-title-18"
            title="Mock title"
          >
            Mock title
          </div>
        </div>
      </div>
      <div
        className="AppSwitcherPanel-actionsContainer-19"
      >
        <WithStyles(Action)
          application={
            Object {
              "iconUrl": "http://mockapp1/icon",
              "id": "app-1",
              "name": "Mock App 1",
              "target": "_top",
              "url": "http://mockapp1/",
            }
          }
          isSelectedCallback={[Function]}
          key="http://mockapp1/"
          onClickCallback={[Function]}
        >
          <Action
            application={
              Object {
                "iconUrl": "http://mockapp1/icon",
                "id": "app-1",
                "name": "Mock App 1",
                "target": "_top",
                "url": "http://mockapp1/",
              }
            }
            classes={
              Object {
                "dummyImage": "Action-dummyImage-23",
                "iconInfo": "Action-iconInfo-25",
                "iconUrl": "Action-iconUrl-26",
                "link": "Action-link-24",
                "selected": "Action-selected-22",
                "typography": "Action-typography-21",
              }
            }
            isSelectedCallback={[Function]}
            onClickCallback={[Function]}
          >
            <a
              className="Action-link-24"
              href="http://mockapp1/"
              target="_top"
            >
              <WithStyles(ForwardRef)
                className="Action-typography-21"
                component="div"
                onClick={[Function]}
                role="button"
                tabIndex={0}
                variant="normalText"
              >
                <ForwardRef
                  className="Action-typography-21"
                  classes={
                    Object {
                      "3xlTitle": "HvTypography-3xlTitle",
                      "4xlTitle": "HvTypography-4xlTitle",
                      "5xlTitle": "HvTypography-5xlTitle",
                      "disabledText": "HvTypography-disabledText",
                      "highlightText": "HvTypography-highlightText",
                      "lTitle": "HvTypography-lTitle",
                      "link": "HvTypography-link",
                      "mTitle": "HvTypography-mTitle",
                      "noWrap": "HvTypography-noWrap",
                      "normalText": "HvTypography-normalText",
                      "placeholderText": "HvTypography-placeholderText",
                      "root": "HvTypography-root",
                      "sTitle": "HvTypography-sTitle",
                      "sectionTitle": "HvTypography-sectionTitle",
                      "selectedNavText": "HvTypography-selectedNavText",
                      "vizText": "HvTypography-vizText",
                      "vizTextDisabled": "HvTypography-vizTextDisabled",
                      "xlTitle": "HvTypography-xlTitle",
                      "xsInlineLink": "HvTypography-xsInlineLink",
                      "xsTitle": "HvTypography-xsTitle",
                      "xxlTitle": "HvTypography-xxlTitle",
                      "xxsTitle": "HvTypography-xxsTitle",
                    }
                  }
                  component="div"
                  onClick={[Function]}
                  role="button"
                  tabIndex={0}
                  variant="normalText"
                >
                  <div
                    className="Action-typography-21 HvTypography-root HvTypography-normalText"
                    onClick={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <img
                      className="Action-iconUrl-26"
                      onError={[Function]}
                      src="http://mockapp1/icon"
                    />
                    <span
                      title="Mock App 1"
                    >
                      Mock App 1
                    </span>
                  </div>
                </ForwardRef>
              </WithStyles(ForwardRef)>
            </a>
          </Action>
        </WithStyles(Action)>
        <WithStyles(Action)
          application={
            Object {
              "description": "Mock App 2 Description",
              "iconUrl": "http://mockapp2/icon",
              "id": "app-2",
              "name": "Mock App 2",
              "target": "_blank",
              "url": "http://mockapp2/",
            }
          }
          isSelectedCallback={[Function]}
          key="http://mockapp2/"
          onClickCallback={[Function]}
        >
          <Action
            application={
              Object {
                "description": "Mock App 2 Description",
                "iconUrl": "http://mockapp2/icon",
                "id": "app-2",
                "name": "Mock App 2",
                "target": "_blank",
                "url": "http://mockapp2/",
              }
            }
            classes={
              Object {
                "dummyImage": "Action-dummyImage-23",
                "iconInfo": "Action-iconInfo-25",
                "iconUrl": "Action-iconUrl-26",
                "link": "Action-link-24",
                "selected": "Action-selected-22",
                "typography": "Action-typography-21",
              }
            }
            isSelectedCallback={[Function]}
            onClickCallback={[Function]}
          >
            <a
              className="Action-link-24"
              href="http://mockapp2/"
              target="_blank"
            >
              <WithStyles(ForwardRef)
                className="Action-typography-21"
                component="div"
                onClick={[Function]}
                role="button"
                tabIndex={0}
                variant="normalText"
              >
                <ForwardRef
                  className="Action-typography-21"
                  classes={
                    Object {
                      "3xlTitle": "HvTypography-3xlTitle",
                      "4xlTitle": "HvTypography-4xlTitle",
                      "5xlTitle": "HvTypography-5xlTitle",
                      "disabledText": "HvTypography-disabledText",
                      "highlightText": "HvTypography-highlightText",
                      "lTitle": "HvTypography-lTitle",
                      "link": "HvTypography-link",
                      "mTitle": "HvTypography-mTitle",
                      "noWrap": "HvTypography-noWrap",
                      "normalText": "HvTypography-normalText",
                      "placeholderText": "HvTypography-placeholderText",
                      "root": "HvTypography-root",
                      "sTitle": "HvTypography-sTitle",
                      "sectionTitle": "HvTypography-sectionTitle",
                      "selectedNavText": "HvTypography-selectedNavText",
                      "vizText": "HvTypography-vizText",
                      "vizTextDisabled": "HvTypography-vizTextDisabled",
                      "xlTitle": "HvTypography-xlTitle",
                      "xsInlineLink": "HvTypography-xsInlineLink",
                      "xsTitle": "HvTypography-xsTitle",
                      "xxlTitle": "HvTypography-xxlTitle",
                      "xxsTitle": "HvTypography-xxsTitle",
                    }
                  }
                  component="div"
                  onClick={[Function]}
                  role="button"
                  tabIndex={0}
                  variant="normalText"
                >
                  <div
                    className="Action-typography-21 HvTypography-root HvTypography-normalText"
                    onClick={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <img
                      className="Action-iconUrl-26"
                      onError={[Function]}
                      src="http://mockapp2/icon"
                    />
                    <span
                      title="Mock App 2"
                    >
                      Mock App 2
                    </span>
                    <Info
                      className="Action-iconInfo-25"
                      title="Mock App 2 Description"
                    >
                      <HvIconBase
                        className="Action-iconInfo-25"
                        iconSize="S"
                        name="Info"
                        title="Mock App 2 Description"
                      >
                        <div
                          className="Action-iconInfo-25 HvIconBase-root HvIconBase-s"
                          name="Info"
                          title="Mock App 2 Description"
                        >
                          <svg
                            focusable={false}
                            height={16}
                            viewBox="0 0 16 16"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              className="color0"
                              d="M8 16a8 8 0 118-8 8 8 0 01-8 8zM8 1a6.957 6.957 0 00-7 6.91373Q.99973 7.95687 1 8a6.957 6.957 0 006.91373 7q.04314.00027.08627 0a6.957 6.957 0 007-6.91373Q15.00027 8.04313 15 8a6.957 6.957 0 00-6.91373-7Q8.04313.99973 8 1zm-.5 11h1V6h-1zm0-7h1V4h-1z"
                              fill="#414141"
                            />
                          </svg>
                        </div>
                      </HvIconBase>
                    </Info>
                  </div>
                </ForwardRef>
              </WithStyles(ForwardRef)>
            </a>
          </Action>
        </WithStyles(Action)>
        <WithStyles(Action)
          application={
            Object {
              "description": "Mock App 2 Description",
              "iconUrl": "http://mockapp2/icon",
              "id": "app-3",
              "name": "Mock App 3",
              "url": "http://mockapp2/",
            }
          }
          isSelectedCallback={[Function]}
          key="http://mockapp2/"
          onClickCallback={[Function]}
        >
          <Action
            application={
              Object {
                "description": "Mock App 2 Description",
                "iconUrl": "http://mockapp2/icon",
                "id": "app-3",
                "name": "Mock App 3",
                "url": "http://mockapp2/",
              }
            }
            classes={
              Object {
                "dummyImage": "Action-dummyImage-23",
                "iconInfo": "Action-iconInfo-25",
                "iconUrl": "Action-iconUrl-26",
                "link": "Action-link-24",
                "selected": "Action-selected-22",
                "typography": "Action-typography-21",
              }
            }
            isSelectedCallback={[Function]}
            onClickCallback={[Function]}
          >
            <a
              className="Action-link-24"
              href="http://mockapp2/"
              target="_top"
            >
              <WithStyles(ForwardRef)
                className="Action-typography-21"
                component="div"
                onClick={[Function]}
                role="button"
                tabIndex={0}
                variant="normalText"
              >
                <ForwardRef
                  className="Action-typography-21"
                  classes={
                    Object {
                      "3xlTitle": "HvTypography-3xlTitle",
                      "4xlTitle": "HvTypography-4xlTitle",
                      "5xlTitle": "HvTypography-5xlTitle",
                      "disabledText": "HvTypography-disabledText",
                      "highlightText": "HvTypography-highlightText",
                      "lTitle": "HvTypography-lTitle",
                      "link": "HvTypography-link",
                      "mTitle": "HvTypography-mTitle",
                      "noWrap": "HvTypography-noWrap",
                      "normalText": "HvTypography-normalText",
                      "placeholderText": "HvTypography-placeholderText",
                      "root": "HvTypography-root",
                      "sTitle": "HvTypography-sTitle",
                      "sectionTitle": "HvTypography-sectionTitle",
                      "selectedNavText": "HvTypography-selectedNavText",
                      "vizText": "HvTypography-vizText",
                      "vizTextDisabled": "HvTypography-vizTextDisabled",
                      "xlTitle": "HvTypography-xlTitle",
                      "xsInlineLink": "HvTypography-xsInlineLink",
                      "xsTitle": "HvTypography-xsTitle",
                      "xxlTitle": "HvTypography-xxlTitle",
                      "xxsTitle": "HvTypography-xxsTitle",
                    }
                  }
                  component="div"
                  onClick={[Function]}
                  role="button"
                  tabIndex={0}
                  variant="normalText"
                >
                  <div
                    className="Action-typography-21 HvTypography-root HvTypography-normalText"
                    onClick={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <img
                      className="Action-iconUrl-26"
                      onError={[Function]}
                      src="http://mockapp2/icon"
                    />
                    <span
                      title="Mock App 3"
                    >
                      Mock App 3
                    </span>
                    <Info
                      className="Action-iconInfo-25"
                      title="Mock App 2 Description"
                    >
                      <HvIconBase
                        className="Action-iconInfo-25"
                        iconSize="S"
                        name="Info"
                        title="Mock App 2 Description"
                      >
                        <div
                          className="Action-iconInfo-25 HvIconBase-root HvIconBase-s"
                          name="Info"
                          title="Mock App 2 Description"
                        >
                          <svg
                            focusable={false}
                            height={16}
                            viewBox="0 0 16 16"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              className="color0"
                              d="M8 16a8 8 0 118-8 8 8 0 01-8 8zM8 1a6.957 6.957 0 00-7 6.91373Q.99973 7.95687 1 8a6.957 6.957 0 006.91373 7q.04314.00027.08627 0a6.957 6.957 0 007-6.91373Q15.00027 8.04313 15 8a6.957 6.957 0 00-6.91373-7Q8.04313.99973 8 1zm-.5 11h1V6h-1zm0-7h1V4h-1z"
                              fill="#414141"
                            />
                          </svg>
                        </div>
                      </HvIconBase>
                    </Info>
                  </div>
                </ForwardRef>
              </WithStyles(ForwardRef)>
            </a>
          </Action>
        </WithStyles(Action)>
      </div>
    </div>
  </AppSwitcherPanel>
</WithStyles(AppSwitcherPanel)>
`;
